[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/menu.png" type="Texture" id=1]
[ext_resource path="res://scripts/Menu.gd" type="Script" id=2]
[ext_resource path="res://assets/font/Kenney Pixel.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/tutorial.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=1]
resource_name = "Fade_In"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Cover/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.0941176, 0.0666667, 0.2, 1 ), Color( 0.0941176, 0.0666667, 0.2, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Cover/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.0941176, 0.0666667, 0.2, 1 ) ]
}

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Menu" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 9.0
margin_top = -48.0
margin_right = 96.0
margin_bottom = -8.0

[node name="Play" type="Button" parent="VBoxContainer"]
margin_right = 87.0
margin_bottom = 18.0
custom_colors/font_color_hover = Color( 0.447059, 0.666667, 0.760784, 1 )
custom_fonts/font = SubResource( 3 )
text = "Play"
flat = true
align = 0

[node name="HowToPlay" type="Button" parent="VBoxContainer"]
margin_top = 22.0
margin_right = 87.0
margin_bottom = 40.0
custom_colors/font_color_hover = Color( 0.447059, 0.666667, 0.760784, 1 )
custom_fonts/font = SubResource( 3 )
text = "How to play"
flat = true
align = 0
__meta__ = {
"_editor_description_": ""
}

[node name="Cover" type="Control" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Cover"]
root_node = NodePath("../..")
anims/Fade_In = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="ColorRect" type="ColorRect" parent="Cover"]
margin_right = 256.0
margin_bottom = 144.0
color = Color( 0.0941176, 0.0666667, 0.2, 1 )

[node name="Tutorial" parent="." instance=ExtResource( 4 )]
visible = false

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="VBoxContainer/HowToPlay" to="." method="_on_HowToPlay_pressed"]
[connection signal="animation_finished" from="Cover/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
